--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    /* background-color: black; */
+    background-color: #000 !important;
   }
   .section{
       height: 80vh;
