--- a/style/style.css
+++ b/style/style.css
@@ -62,7 +62,6 @@ body {
     width: 100%;
     height: 100%;
     background-size: contain;
-    /* background-color: #fff2; */
   }
 /* canvas{
   background-color: #ffff0088;
@@ -85,6 +84,7 @@ font-weight: 700;
 color: #fff;
 }
 
+/*  section2 style */
 .bottom-text{
   font-size: 3rem;
   font-weight: bold;
@@ -93,13 +93,21 @@ color: #fff;
 .bottom-div{
   text-align: center;
   justify-content: center;
-  margin-top: -15% !important;
+  margin-top: -10% !important;
   position: fixed;
 }
 .section2ColumnLeft{
   margin-left: 10%;
 }
+  .spn1{
+    background: linear-gradient(90deg, #0A78CA, #8111BB);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
+.spn2{
+  color: #0095EF;
+}
 
 /* ************section 3 ***************/
 .section3row{
@@ -135,9 +143,7 @@ color: #fff;
   font-weight: bold;
   color: #fff;
 }
-span{
-  color: #0095EF;
-}
+
 .div-content{
   font-size: 1rem;
 }
